--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
     </div>
     <div class="header-bottom">
       <div class="container">
-       <div class="header-bottom-wrapper">
-        <div class="tittle">
-          <p>Интернет магазин<br> строительных материалов<br> и инструментов для ремонта
-          </p>
+        <div class="header-bottom-wrapper">
+          <div class="tittle">
+            <p>Интернет магазин<br> строительных материалов<br> и инструментов для ремонта
+            </p>
+          </div>
+          <div class="contacts">
+            <a href="tel:+78125550555">+7 (812)555-05-55 </a>
+            <p>г. Санкт-Петербург. ул. Б. Конюшенная д. 19/8</p>
+          </div>
+          <div class="user-block">
+            <a href="">Войти</a>
+            <a href="">Регистация</a>
+          </div>
         </div>
-        <div class="contacts">
-          <a href="tel:+78125550555">+7 (812)555-05-55 </a>
-          <p>г. Санкт-Петербург. ул. Б. Конюшенная д. 19/8</p>
-        </div>
-        <div class="user-block">
-          <a href="">Войти</a>
-          <a href="">Регистация</a>
-        </div>
-         </div>
         <nav class="header-nav">
           <ul>
             <li><a href="#">Главная</a></li>
@@ -54,7 +54,6 @@
             <li><a href="#">Контакты</a></li>
           </ul>
         </nav>
-     
       </div>
     </div>
   </header>
@@ -114,51 +113,53 @@
         </div>
         <ul class="popular-product-list">
           <li class="popular-product-item">
+            <div class="flag flag-new">новинка</div>
             <div class="actions">
               <a class="in-basket" href="">Купить</a>
               <a class="in-bookmarks" href="">В закладки</a>
             </div>
-            <h3>Перфоратор Bosch BFG 9000</h3>
             <div class="popular-image">
               <img src="/img/bfg_9000.jpg" alt="Перфоратор Bosch BFG 9000" width="184" height="164">
             </div>
-            <span class="oldprice">32300 P.</span>
-            <span class="newprice">25500 Р.</span>
+            <h3>Перфоратор Bosch BFG 9000</h3>
+            <div class="oldprice">32300 P.</div>
+            <div class="newprice">25500 Р.</div>
           </li>
           <li class="popular-product-item">
             <div class="actions">
-              <a href="#">Купить</a>
-              <a href="">В закладки</a>
+              <a class="in-basket" href="">Купить</a>
+              <a class="in-bookmarks" href="">В закладки</a>
             </div>
-            <h3> Перфоратор Bosch BFG 3000</h3>
-            <p class="popular-product-item-image">
+            <div class="popular-image">
               <img src="/img/bfg_3000.jpg" alt="Перфоратор Bosch BFG 3000" width="127" height="112">
-            </p>
-            <span class="oldprice">22500 P.</span>
-            <span class="newprice">15500 Р.</span>
+            </div>
+            <h3>Перфоратор Bosch BFG 3000</h3>
+            <div class="oldprice">22500 P.</div>
+            <div class="newprice">15500 Р.</div>
           </li>
           <li class="popular-product-item">
             <div class="actions">
-              <a href="#">Купить</a>
-              <a href="">В закладки</a>
+              <a class="in-basket" href="">Купить</a>
+              <a class="in-bookmarks" href="">В закладки</a>
+            </div>
+            <div class="popular-image">
+              <img src="/img/bfg_6000.jpg" alt="Перфоратор Bosch BFG 6000" width="144" height="128">
             </div>
             <h3>Перфоратор Bosch BFG 6000</h3>
-            <p class="popular-product-item-image">
-              <img src="/img/bfg_6000.jpg" alt="Перфоратор Bosch BFG 6000" width="144" height="128">
-            </p>
-            <span class="oldprice">30500 P.</span>
-            <span class="newprice">25500 Р.</span>
+            <div class="oldprice">30500 P.</div>
+            <div class="newprice">22500 Р.</div>
           </li>
           <li class="popular-product-item">
             <div class="actions">
-              <a href="#">Купить</a>
-              <a href="">В закладки</a>
+              <a class="in-basket" href="">Купить</a>
+              <a class="in-bookmarks" href="">В закладки</a>
+            </div>
+            <div class="popular-image">
+              <img src="/img/bfg_2000.jpg" alt="Перфоратор Bosch BFG 2000" width="127" height="112">
             </div>
             <h3>Перфоратор Bosch BFG 2000</h3>
-            <p class="popular-product-item-image">
-              <img src="/img/bfg_2000.jpg" alt="Перфоратор Bosch BFG 2000" width="127" height="112">
-            </p>
-            <span class="newprice">12500 Р.</span>
+            <div class="oldprice"></div>
+            <div class="newprice">12500 Р.</div>
           </li>
         </ul>
       </section>
@@ -209,31 +210,34 @@
           <!--
 		Доставка Гарантия Кредит
 		-->
-          <div class="service-help">
-            <input type="radio" id="delivery" name="service" checked>
-            <input type="radio" id="guaranty" name="service">
-            <input type="radio" id="credit" name="service">
-          </div>
-          <div class="service-controls">
-            <label for="delivery">Доставка</label>
-            <label for="guaranty">Гарантия</label>
-            <label for="credit">Кредит</label>
-          </div>
-          <div class="service-help-right">
-            <div class="service-delivery">
-              <span>Доставка</span>
-              <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!<br> Ведь мы неплохо заработаем, поднимая его на ваш на этаж!</p>
+          <div class="">
+            <div class="service-help">
+              <input type="radio" id="delivery" name="service" checked>
+              <input type="radio" id="guaranty" name="service">
+              <input type="radio" id="credit" name="service">
             </div>
-            <div class="service-help-guaranty">
-              <span> Гарантия</span>
-              <p>
-                Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
+
+            <div class="service-controls">
+              <label for="delivery">Доставка</label>
+              <label for="guaranty">Гарантия</label>
+              <label for="credit">Кредит</label>
             </div>
-            <div class="service-help-Credit">
-              <span>Кредит</span>
-              <p>
-                Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
-              <a class="btn" href="#">Отправить заявку</a>
+            <div class="service-help-right">
+              <div class="service-delivery">
+                <span>Доставка</span>
+                <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!<br> Ведь мы неплохо заработаем, поднимая его на ваш на этаж!</p>
+              </div>
+              <div class="service-help-guaranty">
+                <span> Гарантия</span>
+                <p>
+                  Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
+              </div>
+              <div class="service-help-Credit">
+                <span>Кредит</span>
+                <p>
+                  Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
+                <a class="btn" href="#">Отправить заявку</a>
+              </div>
             </div>
           </div>
         </section>
@@ -278,41 +282,46 @@
           <li><a href="">Доставка</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
-        <div class="footer-center">
-          <p>г. Санкт-Петербург. ул. Б. Конюшенная д. 19/8</p>
-          <ul class="footer-center-nav">
-            <li><a href="">Материалы</a></li>
-            <li><a href="">Техника</a></li>
-            <li><a href="">Инструмент</a></li>
-            <li><a href="">Спецпредложения</a></li>
-          </ul>
-        </div>
       </div>
+      <div class="footer-center">
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>+7 (812) 555-05-55</p>
+        <ul class="footer-center-nav">
+          <li><a href="">Материалы</a></li>
+          <li><a href="">Техника</a></li>
+          <li><a href="">Инструмент</a></li>
+          <li><a href="">Спецпредложения</a></li>
+        </ul>
+      </div>
+
     </div>
     <div class="bottom-footer">
       <div class="container">
-        <p class="about-contacts">
-          2010-2017 Компания "Техномарт" <br> Все права защищены
-        </p>
-        <div class="footer-social">
-          <ul>
-            <li><a class="social-button" href="#">Вконтакте</a></li>
-            <li><a class="social-button" href="#">Фейсбук</a></li>
-            <li><a class="social-button" href="#">Инстаграм</a></li>
-          </ul>
+        <div class="content-bottom-footer">
+          <p class="about-contacts">
+            2010-2017 Компания "Техномарт" <br> Все права защищены
+          </p>
+          <div class="footer-social">
+            <ul>
+              <li><a class="social-button" href="#">Вконтакте</a></li>
+              <li><a class="social-button" href="#">Фейсбук</a></li>
+              <li><a class="social-button" href="#">Инстаграм</a></li>
+            </ul>
+          </div>
+          <div class="bottom-footer-contacts">
+            <p class="footer-mail">
+              <b>Обратная связь:</b>
+              <a class="button" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            </p>
+            <p class="footer-mail">
+              <b>Разработано:</b>
+              <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+            </p>
+          </div>
         </div>
-        <p class="footer-mail">
-          <b>Обратная связь:</b>
-          <a class="button" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-        </p>
-        <p class="footer-copyright">
-          <b>Разработано:</b>
-          <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
-        </p>
       </div>
     </div>
   </footer>
-  <div>
+  <div class="okno">
     <button class="close" type="button">Закрыть</button>
     <form class="letter">
       <label>
@@ -323,10 +332,9 @@
         <span>Ваш e-mail:</span>
         <input class="" type="email" placeholder="Для отправки ответа">
       </label>
-      <label>
-        <span>Текст письма:</span>
-        <textarea class="" rows="5" placeholder="В свободной форме"></textarea>
-      </label>
+
+      <span>Текст письма:</span>
+      <textarea class="" rows="5" placeholder="В свободной форме"></textarea>
       <input type="submit">
     </form>
   </div>
